--- a/index.html
+++ b/index.html
@@ -480,6 +480,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="footer-subscribe-text">Subscribe</p>
+          <form class="footer-subscribe-form">
+            <label class="footer-subscribe-label">
+              <input
+                type="email"
+                name="footer-subscribe-email"
+                id="footer-subscribe-email"
+                class="footer-subscribe-input"
+                placeholder="E-mail"
+              />
+            </label>
+            <button type="submit" class="footer-suscribe-btn">
+              Subscribe
+              <svg class="footer-subsribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
