--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
               id="user-privacy"
             />
             <label class="form-checkbox-lable" for="user-privacy">
-              <span>
+              <span class="checkbox-span">
                 <svg class="form-chekbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
